--- a/StockAnalysis/Login/RegistViewController.xib
+++ b/StockAnalysis/Login/RegistViewController.xib
@@ -64,7 +64,7 @@
                                 <constraint firstAttribute="height" constant="1" id="bML-BG-XKQ"/>
                             </constraints>
                         </view>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6YM-lR-B2X">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6YM-lR-B2X">
                             <rect key="frame" x="37" y="15" width="87" height="22"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="87" id="Ou8-5n-awP"/>
